[package]
name = "mcdbg"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
] }

[lib]
name = "mcdbg"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "mcdbg"
path = "src/main.rs"